# UtopiaForReddit

./: .gitignore  .travis.yml  README.md  pyproject.toml  travis_build_cleaner.py  travis_key.enc  utopia_key.enc  version_writer.py
.github/: ISSUE_TEMPLATE.md  stale.yml
ju-repo/: config.ju
ju-repo/archive/: metadata-mac.ju  metadata-win.ju
ju-repo/templates/MAC/scripts/: postinstall.sh
ju-repo/templates/win/: template.nsi
ju-repo/work/mac/: Analysis-00.toc  BUNDLE-00.toc  EXE-00.toc  PKG-00.pkg  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  mac  warn-mac.txt  xref-mac.html
specs/: common.py  mac.spec  win-release.spec
src/: Darwin.hashchain  UtopiaForReddit.py  __required_imports__.py  cython-compiler.py  slave.py
src/core/: client_config.py  config.py  utils.py  variables.py  version_helper.py
src/reddit/: account_manager.py  oauth.py  reddit_instance_factory.py
src/reddit_managers/: oauth_manager.py  stream_manager.py
src/ui/: __init__.py  account_manager.py  exception_handler.py  info_box.py  main_ui.py  main_ui_pages.py  preferences.py  submission_viewer.py  tips.py  updater.py
src/updater/: __init__.py  updater.py  version_helper.py
src/utopiaforreddit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
